deployment/deployment-https.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-papivot-tools
  labels:
    project.name: k8s-papivot-tools
    project.app: k8s-papivot-tools
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: 'true'
  labels:
    project.app: kube-shell
    project.name: kube-shell
  name: kube-shell
  namespace: k8s-papivot-tools
spec:
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 7681
  selector:
    project.app: kube-shell
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    project.name: kube-shell
    project.app: kube-shell
  name: kube-shell
  namespace: k8s-papivot-tools
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      project.app: kube-shell
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        project.app: kube-shell
    spec:
      containers:
      - env:
        - name: CLUSTER_NAME
          value: kube-shell.env1.lab.test
        image: whoami6443/ttyd_ssl:0.0.5
        imagePullPolicy: IfNotPresent
        name: kube-shell
        ports:
        - containerPort: 7681
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          privileged: false
          runAsNonRoot: true
          runAsUser: 9999
        volumeMounts:
        - mountPath: /etc/ttyd_certs
          name: ssl-pem
#        - mountPath: /user/kshell
#          name: cache-volume
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        stdin: true
        tty: true
      volumes:
      - name: ssl-pem
        secret:
          secretName: ssl-pem
#      - name: cache-volume
#        emptyDir: {}  
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: kube-shell
      serviceAccountName: kube-shell
      terminationGracePeriodSeconds: 30
