deployment/deployment-istio-config.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kube-shell-gateway
  namespace: k8s-shell
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: k8s-shell-selfsigned-cert-tls
    hosts:
    - "kube-shell.env1.lab.test"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kube-shell-vs
  namespace: k8s-shell
spec:
  hosts:
  - "kube-shell.env1.lab.test"
  gateways:
  - kube-shell-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: kube-shell
